deleted card, made dropdowns, outlined containers

--- a/index.html
+++ b/index.html
@@ -26,29 +26,47 @@
     </nav>
     </div>
     <div class="main-section">
+
     <div class="side-bar">
     <aside>
         <p> This is where info about the company will go </p>
     </aside>
     </div>
-<div class="container">
-    <div class="card">
-        <img src="brownie.jpg" alt="Brownie park">
-        <img src="tree.jpeg" alt="Tree park">
-    <div class="card-content">
-        <h2> Little Debbie Park</h2>
-        <p> Located in Collegedale, Tennessee</p>
+    <div class="content">
+        <h2> Welcome to our Travel Company</h2>
+        <p> We are a travel company that specializes in providing the best travel experience for our customers. We have a wide range of services that cater to all your travel needs. Our team of experts are always ready to help you plan your next trip. </p>
         <div class="buttons">
-            <button>Book Now
-            </button>
-            <button>More Info
-            </button>
+        <div class="dropdown">
+            <button class="dropbtn">Travel to Destination</button>
+            <div class="dropdown-content">
+                <a href="">Fly</a>
+                <a href="">Drive</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Travel to Destination</button>
+            <div class="dropdown-content">
+                <a href="">Fly</a>
+                <a href="">Drive</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Travel to Destination</button>
+            <div class="dropdown-content">
+                <a href="">Fly</a>
+                <a href="">Drive</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Travel to Destination</button>
+            <div class="dropdown-content">
+                <a href="">Fly</a>
+                <a href="">Drive</a>
             </div>
         </div>
     </div>
     </div>
     </div>
-    
     
 </body>
 </html>
