--- a/index.html
+++ b/index.html
@@ -33,37 +33,61 @@
     </aside>
     </div>
     <div class="content">
-        <h2> Welcome to our Travel Company</h2>
-        <p> We are a travel company that specializes in providing the best travel experience for our customers. We have a wide range of services that cater to all your travel needs. Our team of experts are always ready to help you plan your next trip. </p>
+        <div class="site-info">
+        <h2> Carhenge</h2>
+        <!-- I asked chatgpt "tell me about carhenge" to get the paragraphs of information about the site-->
+        <p> Carhenge is a quirky and fascinating roadside attraction located near Alliance, Nebraska. It’s a replica of England’s famous Stonehenge, but instead of ancient stones, it’s constructed from vintage American cars. The structure was created in 1987 by Jim Reinders as a tribute to his father. Reinders, who had studied Stonehenge’s design while living in England, used 39 cars to replicate the positions and proportions of the original monument.</p>
+        
+        <p>The cars are painted gray to mimic the look of the stone pillars, and they’re arranged in a circle with some vehicles buried nose-first into the ground and others welded on top to form arches. Carhenge has become a symbol of Americana, blending art, humor, and a nod to British history with the automotive culture of the United States.</p>
+            
+        <p>In addition to the main monument, the surrounding area, known as the Car Art Reserve, features other car-themed sculptures created by various artists. Carhenge is free to visit and draws tourists looking for offbeat attractions on road trips across the Great Plains </p>
+        </div>
         <div class="buttons">
         <div class="dropdown">
-            <button class="dropbtn">Travel to Destination</button>
+            <!-- I used a youtube tutorial and W3 schools to figure out how to make the drop down menus! They aren't entirely functional... but you get the idea of what they're trying to do haha -->
+            <button class="dropbtn">Departure Date?</button>
+            <div class="dropdown-content">
+                <a href="">This week</a>
+                <a href="">Next week</a>
+                <a href="">Next month</a>
+                <a href="">Next year</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Length of stay?</button>
+            <div class="dropdown-content">
+                <a href="">1 day</a>
+                <a href="">2 days</a>
+                <a href="">3 days</a>
+                <a href="">4 days</a>
+                <a href="">5 days</a>
+                <a href="">6 days</a>
+                <a href="">7 days</a>
+                <a href="">8 days</a>
+                <a href="">9 days</a>
+                <a href="">10 days</a>
+
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">How do you want to get there?</button>
             <div class="dropdown-content">
                 <a href="">Fly</a>
                 <a href="">Drive</a>
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn">Travel to Destination</button>
+            <button class="dropbtn">How do you want to get around once you're there?</button>
             <div class="dropdown-content">
-                <a href="">Fly</a>
+                <a href="">Local Transportation</a>
                 <a href="">Drive</a>
+                <a href="">Walk</a>
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn">Travel to Destination</button>
-            <div class="dropdown-content">
-                <a href="">Fly</a>
-                <a href="">Drive</a>
-            </div>
+            <button class="plan-btn">Plan my trip!</button>
         </div>
-        <div class="dropdown">
-            <button class="dropbtn">Travel to Destination</button>
-            <div class="dropdown-content">
-                <a href="">Fly</a>
-                <a href="">Drive</a>
-            </div>
-        </div>
+
     </div>
     </div>
     </div>
