took away side bar, added header img, kinda fixed footer

--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
   <body>
     <div class="head-section">
       <header>
-        <h1>Travel Company Name</h1>
-        <p>
-          Project 1 is a simple project that is created to test the basic
-          knowledge of HTML, CSS and JavaScript.
-        </p>
+        <h1>Wacky Travel Co.</h1>
+        <p>Here to help you see & love the weird, wide, world!</p>
       </header>
       <nav>
         <ul>
@@ -32,11 +29,11 @@
       </nav>
     </div>
     <div class="main-section">
-      <div class="side-bar">
+      <!-- <div class="side-bar">
         <aside>
           <p>This is where info about the company will go</p>
         </aside>
-      </div>
+      </div> -->
       <div class="content">
         <div class="site-info">
           <h2>Carhenge</h2>
@@ -73,6 +70,7 @@
           <img src="carhenge2.jpg" alt="Carhenge" />
           <img src="carhenge3.jpg" alt="Carhenge" />
           <img src="carhenge4.jpg" alt="Carhenge" />
+          <img src="carhenge1.jpg" alt="Carhenge" />
         </div>
         <div class="buttons">
           <div class="dropdown">
@@ -121,10 +119,12 @@
             <button class="plan-btn">Plan my trip!</button>
           </div>
         </div>
+        <div class="footer">
+            <footer>
+              <p>Created by Isabel (555)867-5309</p>
+            </footer>
+          </div>
       </div>
     </div>
-    <footer>
-      <p>Created by Isabel (555)867-5309</p>
-    </footer>
   </body>
 </html>
