--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Caprasimo&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
+    <!-- font awesome icons link -->
+    <script src="https://kit.fontawesome.com/6c01dd1ccd.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="head-section">
@@ -21,10 +23,10 @@
       </header>
       <nav>
         <ul>
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="services.html">Services</a>
-          <a href="contact.html">Contact</a>
+          <a href="index.html">Home  <i class="fa-solid fa-house-chimney-window"></i></a> 
+          <a href="about.html">About  <i class="fa-solid fa-circle-info"></i></a>
+          <a href="services.html">Packages  <i class="fa-solid fa-road"></i></a>
+          <a href="contact.html">Contact  <i class="fa-solid fa-phone"></i></a>
         </ul>
       </nav>
     </div>
@@ -93,9 +95,6 @@
               <a href="">5 days</a>
               <a href="">6 days</a>
               <a href="">7 days</a>
-              <a href="">8 days</a>
-              <a href="">9 days</a>
-              <a href="">10 days</a>
             </div>
           </div>
           <div class="dropdown">
@@ -121,7 +120,12 @@
         </div>
         <div class="footer">
             <footer>
-              <p>Created by Isabel (555)867-5309</p>
+              <p>Created by Isabel Rawlings</p>
+              <p>Contact info:</p>
+                <p>(555)867-5309</p>
+                <p>1234 Wacky Travel Lane</p>
+                <p>wackytravel@wackyemail.org</p>
+            <p>Est. Feb 2025</p>
             </footer>
           </div>
       </div>
